fixed twitter handle, rm show from accordian collapse

--- a/client/src/styles/SocialRender.scss
+++ b/client/src/styles/SocialRender.scss
@@ -17,6 +17,11 @@
     padding-right: 4rem;
   }
 
+  .twitterHandle span {
+    padding: 0;
+    font-size: 1.2rem;
+  }
+
   a {
     &:hover {
       text-decoration: none;
